--- a/routes/mailer/index.html
+++ b/routes/mailer/index.html
@@ -25,7 +25,13 @@
                   <tr>
                     <td>Request</td>
                     <td>
-                            <span> /<b>mailer/send</b>?<b>from</b> =FacebookHacker&&<b>to</b> =toaddress@example.com&&<b>sub</b> =subject&&<b>body</b>=thisismessage</span>
+                            <span> /<b>mailer/send</b>?<b>from</b>=FacebookHacker&&<b>to</b>=toaddress@example.com&&<b>sub</b>=subject&&<b>body</b>=thisisHTMLmessage</span>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td></td>
+                    <td>
+                      <span> /<b>mailer/send</b>?<b>from</b>=FacebookHacker&&<b>to</b>=[UrlEncoded_Array_Of_mailIds]&&<b>sub</b>=subject&&<b>body</b>=thisisHTMLmessage</span>
                     </td>
                   </tr>
                   <tr>
