mailer POST method added

--- a/routes/mailer/index.html
+++ b/routes/mailer/index.html
@@ -16,14 +16,15 @@
     <div class="panel panel-primary">
       <div class="panel-heading">
           <span>SEND MAIL </span>
-          <span class="head label label-success">GET</span>
+          <span class="head label label-success">GET|POST</span>
           <span class="head label label-danger">/send ? from, to, sub, body</span>
         </div>
       <div class="panel-body">
           <br/>
           <table class="table table-condensed">
+            <p>Request</p>
                   <tr>
-                    <td>Request</td>
+                    <td><b>GET</b></td>
                     <td>
                             <span> /<b>mailer/send</b>?<b>from</b>=FacebookHacker&&<b>to</b>=toaddress@example.com&&<b>sub</b>=subject&&<b>body</b>=thisisHTMLmessage</span>
                     </td>
@@ -32,6 +33,21 @@
                     <td></td>
                     <td>
                       <span> /<b>mailer/send</b>?<b>from</b>=FacebookHacker&&<b>to</b>=[UrlEncoded_Array_Of_mailIds]&&<b>sub</b>=subject&&<b>body</b>=thisisHTMLmessage</span>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td><b>POST</b></td>
+                    <td>
+                      <span> /<b>mailer/send</b></span>
+                      <br/>
+                      <span>
+                        {
+                          "from": "Datalkz UI",
+                          "to":[ "ebin@datalkz.com","ebin@gmail.com"],
+                          "sub": "Multiple Email",
+                          "body": "Deployed"
+                        }
+                      </span>
                     </td>
                   </tr>
                   <tr>
